2007-06-04  Michael Natterer  <mitch@gimp.org>

	* libgimpconfig/gimpconfig-deserialize.c: be forward-compatible by
	skipping unknown object properties.

	* app/config/gimprc-deserialize.c: synced code with
	libgimpconfig (same stuff should look the same).

	* app/config/gimprc.c: whitespace.

2007-06-03  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/round-corners.scm: Removed spurious
	call to 'gimp-image-undo-disable'. From a patch by Saul Goode.

2007-06-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpdatafactory.c (gimp_data_factory_load_data): check
	for errors even if the loader_func returned something so we
	display errors from partially loaded files which contain multiple
	data items.

2007-06-03  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpcolorscale.c: let mouse button 1 jump to the
	clicked position directly (just as mouse button 2 does). Feels
	much more intuitive because the result of the operation is visible
	before and color scales have no scroll arrows either.

2007-06-02  Michael Natterer  <mitch@gimp.org>

	* app/gui/gui.c (gui_exit_callback): disconnect the
	gui_display_remove() and gui_display_changed() callbacks before
	deleting the displays, not after (it makes no sense to update the
	GUI while exiting).

2007-06-02  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-dnd.c
	* app/widgets/gimpitemtreeview.c
	* app/widgets/gimpchanneltreeview.c: set the "linked" property of
	newly dropped items to FALSE.

	* app/widgets/gimptoolbox-dnd.c (gimp_toolbox_drop_drawable):
	stylistic cleanup.

2007-06-01  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpperspectiveclonetool.c: commented out debug output.

2007-06-01  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/Makefile.am
	* libgimpcolor/gimpcolor.h
	* libgimpcolor/gimpcolortypes.h
	* libgimpcolor/gimpcolormanaged.[ch]: added an interface that will
	be used to implement the missing bits of color management.
